fixed styling of button and alignment of player name screen title

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 $c-height: 150px;
 $grid-line: 8px;
+
 h1 {
     margin-top: 0;
     padding: 0;
@@ -37,7 +38,6 @@ h1 {
 }
 
 #start {
-    position: absolute;
     color: white;
     margin-left: auto;
     margin-right: auto;
@@ -48,7 +48,6 @@ h1 {
 
 .row {
     text-align: center;
-    
 }
 
 .player-wrapper {
